[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/scn_race.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://fonts/megaman10_font.tres" type="DynamicFont" id=3]

[sub_resource type="RectangleShape2D" id=2]

extents = Vector2( 33.9695, 35.8615 )

[sub_resource type="RectangleShape2D" id=1]

extents = Vector2( 171.55, 10 )

[sub_resource type="RectangleShape2D" id=3]

extents = Vector2( 65.3469, 305.557 )

[node name="scn_race" type="Node2D"]
script = ExtResource( 1 )

[node name="spr_background" type="Sprite" parent="."]
position = Vector2( 515, -597.847 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 1024, 2400 )

[node name="rb2d_car" type="KinematicBody2D" parent="."]
editor/display_folded = true
position = Vector2( 501.422, 480 )

[node name="spr_car" type="Sprite" parent="rb2d_car"]
visible = false
texture = ExtResource( 2 )

[node name="cs2d_car" type="CollisionShape2D" parent="rb2d_car"]
shape = SubResource( 2 )
one_way_collision = true

[node name="rtl_car" type="RichTextLabel" parent="rb2d_car"]
margin_left = -63.9376
margin_top = -17.6849
margin_right = 74.0624
margin_bottom = 22.3151
custom_fonts/normal_font = ExtResource( 3 )
text = "Vehicle"
scroll_active = false

[node name="sb2d_bottom" type="StaticBody2D" parent="."]
position = Vector2( 7.17499, 540 )
scale = Vector2( 3, 3 )

[node name="cs2d_bottom" type="CollisionShape2D" parent="sb2d_bottom"]
position = Vector2( 169.827, 9.54649 )
shape = SubResource( 1 )

[node name="sb2d_left" type="StaticBody2D" parent="."]

[node name="cs2d_left" type="CollisionShape2D" parent="sb2d_left"]
position = Vector2( 64, 300 )
shape = SubResource( 3 )

[node name="sb2d_rigth" type="StaticBody2D" parent="."]

[node name="cs2d_rigth" type="CollisionShape2D" parent="sb2d_rigth"]
position = Vector2( 960, 300 )
shape = SubResource( 3 )

